# nlp

./: .gitignore  hw1.ipynb
hw-2/: Pipfile
hw-2/notebook/: README.txt  word_vectors.ipynb
hw-2/src/: definitions.py  main.py
hw-2/submission/: hw2_pkaran.ipynb
hw-3-pos-tagging/: hw_3.ipynb  pyproject.toml
